--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hewwo</h1>
-<p>Whatup losers</p>
+<h1>Index Page</h1>
+<p>This is a paragraph</p>
 </body>
 </html>
