--- a/index.html
+++ b/index.html
@@ -1,10 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
+  
+  <title>Zayanah's Portfolio</title>
+  
   <link rel="stylesheet" href="styles.css">
+  
 </head>
-<body>
-<h1>Index Page</h1>
-<p>This is a paragraph</p>
-</body>
+<div class="row" style="width: 90%; margin: auto; font-family: 'Karla', sans-serif;">
+  <div class="column left">
+	  <body>
+	  <h1>Zayanah Mahammad</h1>
+	  <h2>Comp Sci Student | Freelance Illustator</h2>
+	  <img src="images/my_photo_square.png" width="80%" alt="photo of me" class="centre">
+	  </img>
+	  <br>
+		<table style="width: 50%; margin: auto;">
+            <tr>
+                <th><img src="images/location_icon.png"></img></th>
+                <td>Kent, UK</td>
+            </tr>
+            <tr>
+                <th><img src="images/mail_icon.png"></img></th>
+                <td>zayanahmahammad@gmail.com</td>
+            </tr>
+            <tr>
+                <th><img src="images/phone_icon.png"></img></th>
+                <td>07474252934</td>
+            </tr>			
+        </table>
+	  </body>
+  </div>
+  
+  <div class="column empty">
+  </div>
+  
+  <div class="column right">
+	  <body>
+	  <h1>Key Skills</h1>
+		<ul>
+		  <li>Web Design</li>
+		  <li>Programming</li>
+		  <li>Digital Illustration</li>
+		  <li>Professional Communication</li>
+		</ul>
+		<br>	  <h1>Education and Experience</h1>
+		<ul>
+			<li>11 GCSEs, A*-B</li>
+			<li>AS Media, A</li>
+			<li>A level Computing, B</li>
+			<li>A-level Mathematics, B</li>
+			<li>A-level Physics, C</li>
+			<li><b>BSc Computer Science at University of Kent, ongoing</b></li>
+		</ul>
+		<br>	
+		<h1>About Me</h1>
+		<p>	My name is Zayanah “Zaya” Mahammad, I’m a second year computer science student at the 
+			University of Kent with a love for my subject and an unbeatable eagerness to put what
+			I’ve learnt into practice. It is for that reason I am searching for a 10-12 month
+			industrial placement where I can learn more about computing as well as gain some
+			valuable experience and possibly a place to return to once I complete my degree 
+			in 2020, if I feel it is a good fit. I am driven enough to pick up anything, 
+			and I intend to pick up everything, from web development to information security, 
+			I am driven to learn as much as I can.
+		</p>
+		<br>
+		<h1>Achievements and Interests</h1>
+		<p>	I have long had an interest in programming, even before I started A-level computing at school, though I did enjoy the opportunity to learn about it in a formal environment. I have worked with many programming languages in and out of school, including but not limited to Java, Python and Lua. I’ve also worked with multiple IDEs, such as IntelliJ, Eclipse and NetBeans. My interest in programming stemmed from my enjoyment of video games, and using my acquired skills I have spent much time modding games and even developing my own. At the heart of who I am, I want nothing more than to create things that people enjoy, hence my involvement in game development.
+	But I engage in a broad spectrum of hobbies, and actually consider myself a very creative individual. I am a self taught digital illustrator, and my skill as an artist and also my professional communication with clients allows me to work part time as a freelance artist, having provided numerous art assets for private customers as well as commercial projects.
+	Besides the aforementioned hobbies, I am constantly trying to learn new things and experience all that life has to offer, so I also take singing and violin lessons.
+
+		</p>		
+		<br>
+	
+	  </body>  
+  </div>
+  
+</div>
+
+
 </html>
