--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <title>Zayanah's Portfolio</title>
   
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="stylesheet.css">
   
 </head>
 <div class="row" style="width: 90%; margin: auto; font-family: 'Karla', sans-serif;">
